// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BundleValue rendering tests BundleValue - discountAmount defined -  test 1`] = `
<div>
  <section
    class="space-y-3"
    data-testid="bundle-value"
  >
    <h3
      class="text-lg font-semibold text-slate-900 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-badge-percent h-5 w-5 text-green-600"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="M9 9h.01"
        />
        <path
          d="M15 15h.01"
        />
      </svg>
      Bundle Value
    </h3>
    <div
      class="bg-gradient-to-br from-green-50 to-emerald-50 border-2 border-green-200 rounded-lg p-6"
    >
      <div
        class="flex flex-col md:flex-row items-start md:items-center justify-between gap-4"
      >
        <div
          class="space-y-2"
          data-testid="savings"
        >
          <div
            class="inline-flex items-center gap-2 px-4 py-2 bg-green-100 border border-green-300 rounded-full"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-down h-5 w-5 text-green-700"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 17h6v-6"
              />
              <path
                d="m22 17-8.5-8.5-5 5L2 7"
              />
            </svg>
            <span
              class="text-lg font-bold text-green-800"
            >
              Save CHF 
              14.98
               (
              19
              %)
            </span>
          </div>
          <p
            class="text-sm text-green-800"
          >
            Get 
            3
             templates for the price of
             
            2
            !
          </p>
        </div>
        <div
          class="flex flex-col gap-2 text-sm"
          data-testid="price-summary"
        >
          <div
            class="flex items-center justify-between gap-4"
          >
            <span
              class="text-slate-700"
            >
              Individual prices:
            </span>
            <span
              class="font-medium text-slate-900 line-through"
            >
              CHF 
              74.97
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-4"
          >
            <span
              class="text-slate-700"
            >
              Bundle price:
            </span>
            <span
              class="font-bold text-green-700 text-lg"
            >
              CHF 
              59.99
            </span>
          </div>
        </div>
      </div>
      <div
        class="mt-4 pt-4 border-t border-green-200"
        data-testid="note"
      >
        <div
          class="flex items-start gap-2 text-sm text-green-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-package h-4 w-4 mt-0.5 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
            />
            <path
              d="M12 22V12"
            />
            <polyline
              points="3.29 7 12 12 20.71 7"
            />
            <path
              d="m7.5 4.27 9 5.15"
            />
          </svg>
          <p>
            <strong>
              Bundle Theme:
            </strong>
             This curated collection provides everything you need for comprehensive AI-assisted workflows. All templates work together seamlessly for maximum productivity.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`BundleValue rendering tests BundleValue - discountAmount null -  test 1`] = `<div />`;

exports[`BundleValue rendering tests BundleValue - productItems empty -  test 1`] = `
<div>
  <section
    class="space-y-3"
    data-testid="bundle-value"
  >
    <h3
      class="text-lg font-semibold text-slate-900 flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-badge-percent h-5 w-5 text-green-600"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="M9 9h.01"
        />
        <path
          d="M15 15h.01"
        />
      </svg>
      Bundle Value
    </h3>
    <div
      class="bg-gradient-to-br from-green-50 to-emerald-50 border-2 border-green-200 rounded-lg p-6"
    >
      <div
        class="flex flex-col md:flex-row items-start md:items-center justify-between gap-4"
      >
        <div
          class="space-y-2"
          data-testid="savings"
        >
          <div
            class="inline-flex items-center gap-2 px-4 py-2 bg-green-100 border border-green-300 rounded-full"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-down h-5 w-5 text-green-700"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 17h6v-6"
              />
              <path
                d="m22 17-8.5-8.5-5 5L2 7"
              />
            </svg>
            <span
              class="text-lg font-bold text-green-800"
            >
              Save CHF 
              14.98
               (
              19
              %)
            </span>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 text-sm"
          data-testid="price-summary"
        >
          <div
            class="flex items-center justify-between gap-4"
          >
            <span
              class="text-slate-700"
            >
              Individual prices:
            </span>
            <span
              class="font-medium text-slate-900 line-through"
            >
              CHF 
              74.97
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-4"
          >
            <span
              class="text-slate-700"
            >
              Bundle price:
            </span>
            <span
              class="font-bold text-green-700 text-lg"
            >
              CHF 
              59.99
            </span>
          </div>
        </div>
      </div>
      <div
        class="mt-4 pt-4 border-t border-green-200"
        data-testid="note"
      >
        <div
          class="flex items-start gap-2 text-sm text-green-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-package h-4 w-4 mt-0.5 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
            />
            <path
              d="M12 22V12"
            />
            <polyline
              points="3.29 7 12 12 20.71 7"
            />
            <path
              d="m7.5 4.27 9 5.15"
            />
          </svg>
          <p>
            <strong>
              Bundle Theme:
            </strong>
             This curated collection provides everything you need for comprehensive AI-assisted workflows. All templates work together seamlessly for maximum productivity.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
